# diagnostica-sage

./: .gitignore  CHANGELOG.md  README.md  cabal.project  diagnostica-sage.cabal
example/: Main.hs  diagnostica-sage-example.cabal
src/Text/Diagnostic/: Sage.hs
test/: Main.hs
