cabal-version:       2.4

name:                diagnostica-sage
version:             0.1.1.1
synopsis:            diagnostica support for sage parse errors 
description:         
  diagnostica support for sage parse errors.
  .
  <<https://github.com/LightAndLight/diagnostica-sage/blob/master/res/example1.png>>
bug-reports:         https://github.com/LightAndLight/diagnostica-sage/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Isaac Elliott
maintainer:          isaace71295@gmail.com
copyright:           2020 Isaac Elliott
category:            Language
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Text.Diagnostic.Sage
  build-depends:       base >=4.12 && <5
                     , bytestring
                     , diagnostica >=0.2 && <0.3
                     , sage
                     , text >=1.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

executable example
  main-is:             Main.hs
  build-depends:       base >=4.12 && <5
                     , bytestring
                     , diagnostica
                     , diagnostica-sage
                     , parsers
                     , sage
                     , sage-parsers-instances
                     , text >=1.2
  hs-source-dirs:      example
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

test-suite diagnostica-sage-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >=4.12 && <5
                     , diagnostica
                     , diagnostica-sage
                     , parsers
                     , sage
                     , hspec
                     , text >=1.2
  ghc-options:         -Wall -Werror
