cabal-version:       2.4

name:                diagnostica-sage-example
version:             0.1
license:             BSD-3-Clause
author:              Isaac Elliott
maintainer:          isaace71295@gmail.com
copyright:           2020 Isaac Elliott
category:            Language

executable example
  main-is:             Main.hs
  build-depends:       base >=4.12 && <5
                     , bytestring
                     , diagnostica
                     , diagnostica-sage
                     , parsers
                     , sage
                     , sage-parsers-instances
                     , text >=1.2
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
